# flywheel

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TRACKER.md  cbindgen.toml  repomix-output.xml  rustfmt.toml
benches/: cell_benchmark.rs  comparison_benchmark.rs  diff_benchmark.rs  rope_benchmark.rs
docs/: V2_ROADMAP.md
examples/: smoke_test.rs  streaming_demo.rs  widgets_demo.rs
include/: flywheel.h
src/: ffi.rs  lib.rs
src/actor/: engine.rs  input.rs  messages.rs  mod.rs  renderer.rs  ticker.rs
src/buffer/: buffer.rs  cell.rs  diff.rs  mod.rs  rope.rs
src/layout/: mod.rs  rect.rs  region.rs
src/terminal/: mod.rs  output.rs
src/widget/: mod.rs  progress_bar.rs  scroll_buffer.rs  status_bar.rs  stream.rs  terminal.rs  text_input.rs  traits.rs
